updated styles for mobile, fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,10 @@
-/*Aleo Light*/
-@font-face {
-    font-family: 'aleolight';
-    src: url('Aleo-Light-webfont.eot');
-    src: url('Aleo-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Aleo-Light-webfont.woff') format('woff'),
-         url('Aleo-Light-webfont.ttf') format('truetype'),
-         url('Aleo-Light-webfont.svg#aleolight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/*Aleo Light Italic*/
-@font-face {
-    font-family: 'aleolightitalic';
-    src: url('Aleo-LightItalic-webfont.eot');
-    src: url('Aleo-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Aleo-LightItalic-webfont.woff') format('woff'),
-         url('Aleo-LightItalic-webfont.ttf') format('truetype'),
-         url('Aleo-LightItalic-webfont.svg#aleolightitalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/*Aleo Bold*/
-@font-face {
-    font-family: 'aleobold';
-    src: url('Aleo-Bold-webfont.eot');
-    src: url('Aleo-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Aleo-Bold-webfont.woff') format('woff'),
-         url('Aleo-Bold-webfont.ttf') format('truetype'),
-         url('Aleo-Bold-webfont.svg#aleobold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
 /*Mobile first*/
 html, body, #wrapper {
     height: 100%;
     width: 100%;
     left: 0;
     margin: 0 auto;
-    font-family: 'aleolight', sans-serif;
-    font-size: 0.8em;
+    font-family: 'Raleway', sans-serif;
 }
 
 @-ms-viewport {
@@ -132,6 +93,10 @@ html, body, #wrapper {
   background-color: #661e2a;
 }
 
+p {
+  font-size: 1.2em;
+}
+
 div.menu {
   height: 30px;
   width: 100%;
@@ -150,7 +115,7 @@ div.menu {
   padding: 3px;
   margin: 2px;
   border: 5px solid #661e2a;
-  border-radius: 5px;
+  border-radius: 10px;
   background: transparent;
   color: #661e2a;
   font-size: 1.1em;
@@ -221,7 +186,7 @@ div.menu {
 
 #logo-div h1 {
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     margin: 0 auto;
     margin-top: 15px;
     position: absolute;
@@ -239,22 +204,21 @@ div.menu {
 .others {
     width: 100%;
     left: 0;
-    height: 75%;
+    height: 600px;
     text-align: center;
-    font-size: 1.5em;
 }
 
 .others h1 {
     padding: 10px;
-    font-size: 1.3em;
-    line-height: 1.2em;
+    font-size: 2em;
+    line-height: 1.1em;
     font-weight: bolder;
 }
 
 .others h2 {
     padding: 10px;
-    font-size: 1.3em;
-    line-height: 1.2em;
+    font-size: 1.5em;
+    line-height: 1em;
     font-weight: bold;
 }
 
@@ -300,6 +264,7 @@ div.menu {
 div.content {
   position: relative;
   top: 50%;
+  padding: 20px;
   -ms-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
@@ -342,8 +307,8 @@ div.content {
 
 #about p {
   font-weight: bold;
-  font-size: 1.4em;
-  line-height: 1.2em;
+  font-size: 1.5em;
+  line-height: 1.1em;
   padding: 10px;
 }
 
@@ -409,32 +374,53 @@ div.contactinfo {
 }
 
 #footer {
-  font-size: .6em;
+  font-size: 0.8em;
   height: 60px;
   width: 100%;
   left: 0;
   bottom: 0;
+  margin: 0 auto;
   background: #8c8c8c;
   color: white;
   z-index: 2;
   display: inline-block;
+  text-align: center;
+  padding-top: 20px;
 }
 
+#copy {
+  font-size: 1.2em;
+  font-weight: bold;
+}
 
 /*MEDIA QUERIES*/
 
-@media only screen and (max-width:768px) and (orientation: landscape) {
+@media only screen and (max-width: 48em) and (orientation: landscape) {
   #logo-div img {
     top: 20%;
   }
 
- .others {
-  height: 95%;
+  #logo-div h1 {
+    font-size: 2em;
   }
+
+ .others {
+  height: 700px;
+  }
+
+.others h1 {
+  font-size: 2em;
+  line-height: 1.5em;
+}
+
+.others h2 {
+  font-size: 1.5em;
+  line-height: 1.25em;
+}
 
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 48em) {
 
 html, body, #wrapper {
   font-size: 1em;
@@ -457,27 +443,41 @@ div.menu {
   width: 30%;
 }
 
-}
-
-@media only screen and (min-width: 900px) {
-
-.others {
-  height: 70%;
-}
-
 .others h1 {
   font-size: 2em;
   line-height: 1.5em;
+}
+
+.others h2 {
+  font-size: 1.5em;
+  line-height: 1.25em;
+}
+
+}
+
+@media only screen and (min-width: 56em) {
+
+/*.others {
+  height: 110%;
+}*/
+
+#logo-div h1 {
+  font-size: 3em;
+}
+
+.others h1 {
+  font-size: 3em;
+  line-height: 1.75em;
   font-weight: bolder;
 }
 
 .others h2 {
-    font-size: 1.5em;
+    font-size: 2em;
     line-height: 1.2em;
 }
 
 #about p {
-  font-size: 1.6em;
+  font-size: 2em;
 }
 
 #map {
@@ -485,9 +485,11 @@ div.menu {
   height: 50%;
   margin: 0 auto;
 } 
+
 }
 
 @media only screen and (min-width: 1000px) {
+
 #map {
   width: 1000px;
   height: 50%;
